# universal-intel-driver

./: Cargo.toml  README.md
src/: driver_db.rs  gui.rs  hardware.rs  installer.rs  lib.rs  logger.rs  main.rs  system.rs
