[package]
name = "universal_intel_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["wgpu"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29.0"
winreg = "0.50.0"
thiserror = "1.0"
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Registry"
] }